update dob + age

--- a/CS211_final.ipynb
+++ b/CS211_final.ipynb
@@ -60,7 +60,7 @@
    "execution_count": 7,
    "id": "ef40fb64",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -283,6 +283,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6084881",
+   "metadata": {},
+   "source": [
+    "# dob + laplace"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "id": "02fa157b",
@@ -437,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1194bdf1",
+   "id": "9e9a8d5d",
    "metadata": {},
    "source": [
     "# # age + laplace"
