--- a/CS211_final.ipynb
+++ b/CS211_final.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "id": "afdbe95b",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
+    "import math\n",
     "from datetime import datetime\n",
     "\n",
     "from scipy import stats\n",
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "ef40fb64",
    "metadata": {
     "scrolled": false
@@ -272,7 +273,7 @@
        "[5 rows x 52 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "1a7c68ac",
    "metadata": {},
    "outputs": [],
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "87b9aecb",
    "metadata": {
     "scrolled": true
@@ -327,7 +328,7 @@
        "3240"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "962dcb91",
    "metadata": {},
    "outputs": [
@@ -351,17 +352,17 @@
        "10/11/1988    17\n",
        "28/04/1992    15\n",
        "13/08/1994    15\n",
-       "27/04/1989    14\n",
+       "16/10/1983    14\n",
        "              ..\n",
-       "28/07/1962     1\n",
-       "14/01/1963     1\n",
-       "22/01/1966     1\n",
-       "06/10/1964     1\n",
-       "17/09/1980     1\n",
+       "25/03/1984     1\n",
+       "19/04/1954     1\n",
+       "15/02/1976     1\n",
+       "23/09/1985     1\n",
+       "13/06/1971     1\n",
        "Name: dob, Length: 7485, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,28 +375,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "e462f07a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "21/11/1991    21.302139\n",
-       "10/11/1988    20.833655\n",
-       "28/04/1992    15.478421\n",
-       "13/08/1994    15.203788\n",
-       "27/04/1989    14.011664\n",
+       "21/11/1991    17.096817\n",
+       "10/11/1988    17.822079\n",
+       "28/04/1992    14.738579\n",
+       "13/08/1994    13.317947\n",
+       "16/10/1983    11.667165\n",
        "                ...    \n",
-       "28/07/1962     1.182656\n",
-       "14/01/1963    -0.173085\n",
-       "22/01/1966     2.482704\n",
-       "06/10/1964     1.429896\n",
-       "17/09/1980    -2.635249\n",
+       "25/03/1984    -0.223739\n",
+       "19/04/1954     3.265226\n",
+       "15/02/1976     0.804344\n",
+       "23/09/1985     0.717240\n",
+       "13/06/1971    -1.116735\n",
        "Name: dob, Length: 7485, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,28 +454,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "id": "76a4301d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22    911.711218\n",
-       "26    911.364596\n",
-       "24    912.592541\n",
-       "21    899.356342\n",
-       "25    891.871366\n",
+       "22    914.908986\n",
+       "26    911.379515\n",
+       "24    910.438248\n",
+       "21    899.889828\n",
+       "25    888.795602\n",
        "         ...    \n",
-       "78      1.451481\n",
-       "83      2.612226\n",
-       "96      3.220700\n",
-       "80      0.816031\n",
-       "79      1.624139\n",
+       "78      0.642565\n",
+       "83      2.418694\n",
+       "96      2.630015\n",
+       "80      1.535264\n",
+       "79      0.415801\n",
        "Name: age, Length: 65, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,28 +492,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 118,
    "id": "ae63016e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22    915.057285\n",
-       "26    906.636384\n",
-       "24    909.813823\n",
-       "21    898.002081\n",
-       "25    890.672330\n",
+       "22    914.295248\n",
+       "26    910.845071\n",
+       "24    911.214475\n",
+       "21    898.497141\n",
+       "25    890.199375\n",
        "         ...    \n",
-       "78      1.262864\n",
-       "83      3.378997\n",
-       "96      2.380283\n",
-       "80      1.125630\n",
-       "79     -0.386954\n",
+       "78      2.838247\n",
+       "83      1.976059\n",
+       "96      1.776140\n",
+       "80      5.317843\n",
+       "79      1.144874\n",
        "Name: age, Length: 65, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,16 +523,16 @@
     "b=90 # age up to 90\n",
     "\n",
     "real_sum = adult['age'].sum()\n",
-    "def clip_sum():\n",
-    "    clipped_sum= adult['age'].clip(lower=0, upper=b).sum()\n",
-    "    dp_clipped_sum =  age_hist().apply(lambda x: laplace_mech(x,1,epsilon)) #sensitivity = 0.1\n",
-    "    return (dp_clipped_sum)\n",
-    "clip_sum()"
+    "def clip_age():\n",
+    "    clipped_age= adult['age'].clip(lower=0, upper=b).sum()\n",
+    "    dp_clipped_age =  age_hist().apply(lambda x: laplace_mech(x,1,epsilon)) #sensitivity = 1\n",
+    "    return (dp_clipped_age)\n",
+    "clip_age()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 120,
    "id": "8212ba18",
    "metadata": {},
    "outputs": [
@@ -539,23 +540,236 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22      0.031469\n",
-      "26      0.089396\n",
-      "24      0.040686\n",
-      "21      0.136537\n",
-      "25      0.275431\n",
+      "22      0.039909\n",
+      "26      0.010997\n",
+      "24      0.105684\n",
+      "21      0.051925\n",
+      "25      0.052851\n",
       "         ...    \n",
-      "78     18.052080\n",
-      "83     83.396201\n",
-      "96      3.060180\n",
-      "80    153.785961\n",
-      "79     44.080214\n",
+      "78     19.035297\n",
+      "83     59.526826\n",
+      "96     20.119115\n",
+      "80    100.223792\n",
+      "79     30.647504\n",
       "Name: age, Length: 65, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "print (pct_error(age_hist(),clip_sum()))   #percentage error"
+    "print (pct_error(age_hist(),clip_age()))   #percentage error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "948b801c",
+   "metadata": {},
+   "source": [
+    "# Compare laplace and Gaussian mechanism in a workload in 'age' set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "82390962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Range Query\n",
+    "\n",
+    "def range_query(df, col, a, b):\n",
+    "    return len(df[(df[col] >= a) & (df[col] < b)])\n",
+    "\n",
+    "random_lower_bounds = [random.randint(1, 70) for _ in range(100)]\n",
+    "random_workload = [(lb, random.randint(lb, 100)) for lb in random_lower_bounds]\n",
+    "real_answers_age = [range_query(adult, 'age', lb, ub) for (lb, ub) in random_workload]\n",
+    "real_answers_start = [range_query(adult, 'start', lb, ub) for (lb, ub) in random_workload]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "da1b7656",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 4 answers: [17852.406735389184, 5089.391032043011, 14114.416543987554, 12324.97410524247]\n",
+      "Average absolute error: 111.79698391384326\n"
+     ]
+    }
+   ],
+   "source": [
+    "def workload_laplace(workload, epsilon):\n",
+    "    ans_list = []\n",
+    "    for work in workload:\n",
+    "        a, b = work\n",
+    "        range = range_query(adult, 'age', a, b)\n",
+    "        noised = laplace_mech(range, len(workload), epsilon)\n",
+    "        ans_list.append(noised)\n",
+    "    return ans_list\n",
+    "print('First 4 answers:', workload_laplace(random_workload, 1.0)[:4])\n",
+    "errors = [abs(r_a - l_a) for (r_a, l_a) in zip(real_answers_age, workload_laplace(random_workload, 1.0))]\n",
+    "print('Average absolute error:', np.mean(errors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "705330a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 4 answers: [18350.978392087225, 5366.393237028066, 14138.585395010643, 12210.685270701535]\n",
+      "Average absolute error: 96.88955177890185\n"
+     ]
+    }
+   ],
+   "source": [
+    "def workload_laplace_vec(workload, epsilon):\n",
+    "    ans_list = []\n",
+    "    L1_GS = len(workload)\n",
+    "    range = [range_query(adult, 'age', work[0], work[1]) for work in workload]\n",
+    "    \n",
+    "    noise = laplace_mech_vec(range, L1_GS, epsilon)\n",
+    "    return noise\n",
+    "print('First 4 answers:', workload_laplace_vec(random_workload, 1.0)[:4])\n",
+    "errors = [abs(r_a - l_a) for (r_a, l_a) in zip(real_answers_age, workload_laplace_vec(random_workload, 1.0))]\n",
+    "print('Average absolute error:', np.mean(errors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "a4ee3706",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 4 answers: [18052.45166833329, 5112.881558247237, 14159.328050693126, 12208.382071446595]\n",
+      "Average absolute error: 38.94582569525386\n"
+     ]
+    }
+   ],
+   "source": [
+    "def workload_gaussian_vec(workload, epsilon, delta):\n",
+    "    ans_list = []\n",
+    "    L2 = math.sqrt(len(workload))\n",
+    "    rdp = [range_query(adult, 'age', work[0], work[1]) for work in workload]\n",
+    "    \n",
+    "    noise = gaussian_mech_vec(rdp, L2, epsilon, delta)\n",
+    "    return noise\n",
+    "print('First 4 answers:', workload_gaussian_vec(random_workload, 1.0, 1e-5)[:4])\n",
+    "errors = [abs(r_a - l_a) for (r_a, l_a) in zip(real_answers_age, workload_gaussian_vec(random_workload, 1.0, 1e-5))]\n",
+    "print('Average absolute error:', np.mean(errors))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d9d9f0a",
+   "metadata": {},
+   "source": [
+    "# # Compare laplace and Gaussian mechanism in a workload in 'start' set\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "9e0b1242",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 4 answers: [1263.1646049304245, 217.92383365041783, 714.8487421851632, 1497.2123814521242]\n",
+      "Average absolute error: 86.42926870125879\n"
+     ]
+    }
+   ],
+   "source": [
+    "def workload_laplace2(workload, epsilon):\n",
+    "    ans_list = []\n",
+    "    for work in workload:\n",
+    "        a, b = work\n",
+    "        range = range_query(adult, 'start', a, b)\n",
+    "        noised = laplace_mech(range, len(workload), epsilon)\n",
+    "        ans_list.append(noised)\n",
+    "    return ans_list\n",
+    "print('First 4 answers:', workload_laplace2(random_workload, 1.0)[:4])\n",
+    "errors = [abs(r_a - l_a) for (r_a, l_a) in zip(real_answers_start, workload_laplace2(random_workload, 1.0))]\n",
+    "print('Average absolute error:', np.mean(errors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "90b8054a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 4 answers: [1411.21745102895, 117.59281811084422, 850.1828334436161, 1447.5590789578578]\n",
+      "Average absolute error: 99.90407772917624\n"
+     ]
+    }
+   ],
+   "source": [
+    "def workload_laplace_vec2(workload, epsilon):\n",
+    "    ans_list = []\n",
+    "    L1_GS = len(workload)\n",
+    "    range = [range_query(adult, 'start', work[0], work[1]) for work in workload]\n",
+    "    \n",
+    "    noise = laplace_mech_vec(range, L1_GS, epsilon)\n",
+    "    return noise\n",
+    "print('First 4 answers:', workload_laplace_vec2(random_workload, 1.0)[:4])\n",
+    "errors = [abs(r_a - l_a) for (r_a, l_a) in zip(real_answers_start, workload_laplace_vec2(random_workload, 1.0))]\n",
+    "print('Average absolute error:', np.mean(errors))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "cb7e4233",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 4 answers: [1352.9873991165, 282.9076160114672, 749.6842111886693, 1468.5534114422035]\n",
+      "Average absolute error: 36.60416552098758\n"
+     ]
+    }
+   ],
+   "source": [
+    "def workload_gaussian_vec2(workload, epsilon, delta):\n",
+    "    ans_list = []\n",
+    "    L2 = math.sqrt(len(workload))\n",
+    "    rdp = [range_query(adult, 'start', work[0], work[1]) for work in workload]\n",
+    "    \n",
+    "    noise = gaussian_mech_vec(rdp, L2, epsilon, delta)\n",
+    "    return noise\n",
+    "print('First 4 answers:', workload_gaussian_vec2(random_workload, 1.0, 1e-5)[:4])\n",
+    "errors = [abs(r_a - l_a) for (r_a, l_a) in zip(real_answers_start, workload_gaussian_vec2(random_workload, 1.0, 1e-5))]\n",
+    "print('Average absolute error:', np.mean(errors))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8564600f",
+   "metadata": {},
+   "source": [
+    "- Workload_laplace uses sequential composition, and Work_load_laplace_Vec uses L1 sensitivitity. So their accuracy are about the same. \n",
+    "- Workload_gaussian_vec are the most accurate because it uses L2 sensitivity.\n"
    ]
   }
  ],
